* Fixed issue with integer predictors and NOMAD for npglpreg() arising from upgrade to latest version of NOMAD

Changes from Version 0.15-26 to 0.15-27 [06-May-2017]

* Zhenghua fixed minor issue with dim.bs()

* Incorporating Simon Wood's C-based tensor product code (was using his R-based code, the C code is substantially faster)

* Naming of variables in NOMAD port aligned with Brian Ripley's comment ('Identifiers starting with an underscore followed by an upper-case letter or another underscore are reserved for system macros and should not be used in portable code (including not as guards in C/C++ headers).')

Changes from Version 0.15-25 to 0.15-26 [29-April-2017]

* Zhenghua patched up issues arising with windows build

* crs_init.c attempts to deal with registration issue/note

Changes from Version 0.15-24 to 0.15-25 [29-April-2017]

* Fixed glitch that could potentially arise when computing derivatives and multiple predictors are assigned degree 0 when using the glp basis

* Updated NOMAD to latest version (3.8, released March 2017)

Changes from Version 0.15-23 to 0.15-24 [18-Dec-2014]

* Move option init from .onAttach to .onLoad in zzz.R (Bernd Bischl)

* Reworded DESCRIPTION (request from Kurt Hornik)

Changes from Version 0.15-22 to 0.15-23 [11-Aug-2014]

* Fixed bugs on setting seed in snomadr so that successive calls with
  restarting result in the same solution (thanks to Arne Henningson for
  detecting and reporting this issue)

* Addressed issue with cv.aic and npglpreg where degenerate solution could
  occur when shrinking was invoked

* Enhanced the robust measure of scale to include mad which is more robust
  than IQR

Changes from Version 0.15-21 to 0.15-22 [22-Jan-2014]

* crs.messages=FALSE was being ignored in frscv, krscv, frscvNOMAD, and
  krscvNOMAD, as was the passing of additional arguments via opts=list()
  to snomadr from certain functions

* Default settings for tuning parameters for snomadr in npglpreg have been