@@ -52,7 +52,7 @@ crsiv <- function(y,
                             "EPSILON"=.Machine$double.eps,
                             "INITIAL_MESH_SIZE"="r1.0e-01",
                             "MIN_MESH_SIZE"=paste("r",sqrt(.Machine$double.eps),sep=""),
-                            "MIN_POLL_SIZE"=paste("r",sqrt(.Machine$double.eps),sep=""),
+                            "MIN_POLL_SIZE"=paste("r",1,sep=""),
                             "DISPLAY_DEGREE"=0),
                   ...) {
 
