@@ -619,7 +619,7 @@ npglpreg.formula <- function(formula,
                              initial.mesh.size.integer=1,
                              min.mesh.size.real=sqrt(.Machine$double.eps),
                              min.mesh.size.integer=1, 
-                             min.poll.size.real=sqrt(.Machine$double.eps),
+                             min.poll.size.real=1,
                              min.poll.size.integer=1, 
                              opts=list(),
                              restart.from.min=FALSE,
@@ -1668,7 +1668,7 @@ glpcvNOMAD <- function(ydat=NULL,
                        initial.mesh.size.integer=1,
                        min.mesh.size.real=sqrt(.Machine$double.eps),
                        min.mesh.size.integer=1, 
-                       min.poll.size.real=sqrt(.Machine$double.eps),
+                       min.poll.size.real=1,
                        min.poll.size.integer=1, 
                        cv.shrink=TRUE,
                        cv.maxPenalty=sqrt(.Machine$double.xmax),
