@@ -61,7 +61,7 @@ crs(\dots)
     initial.mesh.size.integer = "1",
     min.mesh.size.real = paste(sqrt(.Machine$double.eps)),
     min.mesh.size.integer = 1, 
-    min.poll.size.real = paste(sqrt(.Machine$double.eps)),
+    min.poll.size.real = 1,
     min.poll.size.integer = 1, 
     opts=list(),
     nmulti = 5,
